# axiom-os

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
axiom-tests/: Cargo.toml
axiom-tests/src/: lib.rs
axiom-tests/tests/: crypto_vectors.rs
boot/: Cargo.toml  build.rs
boot/src/: main.rs
docs/: SMP_STATUS.md  formal_connections.tex  paper.tex
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  context_switch.s  crypto.rs  crypto_aead.rs  eipc.rs  elf_loader.rs  framebuffer.rs  gdt.rs  interrupts.rs  lattice.rs  log_buffer.rs  main.rs  meal.rs  memory.rs  net.rs  poly1305.rs  scheduler.rs  serial.rs  smp.rs  smp_trampoline.s  syscall.rs  syscall_entry.s  task.rs  user.rs  vmz.rs  ztdf.rs
kernel/src/axiom/: capability.rs  demo_crypto.rs  mod.rs
lean/: Axiom.lean  lakefile.lean
scripts/: meal_persist.py  verify_boot.py
tests/: crypto_vectors.rs
userspace/: Makefile  hello.elf  hello.ld  hello.s
